--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.aws.codestar.projecttemplates</groupId>
-    <artifactId>cb10amdevops</artifactId>
+    <artifactId>sagar</artifactId>
     <version>2.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>Cloud Binary Sample Spring MVC Application</name>
@@ -34,24 +34,20 @@
     </repository>	
 </distributionManagement>
     -->
-    
-<distributionManagement>
-    
-    <snapshotRepository>
-        <id>snapshots</id>
-        <name>jfrog.cloudbinary.io-snapshots</name>
-        <url>http://54.156.113.36:8081/artifactory/libs-snapshot-local</url>
-    </snapshotRepository>
-    
+   <distributionManagement>
     <repository>
         <id>releases</id>
-        <name>jfrog.cloudbinary.io-releases</name>
-        <url>http://54.156.113.36:8081/artifactory/libs-release-local</url>
+        <name>libs-release-local</name>
+        <url>http://50.17.80.244:8081/artifactory/libs-release-local</url>
     </repository>
 
-</distributionManagement>    
-    
-    
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>libs-snapshot-local</name>
+        <url>http://50.17.80.244:8081/artifactory/libs-snapshot-local</url>
+    </snapshotRepository>
+</distributionManagement>
+  
     <dependencies>
         <dependency>
             <groupId>org.springframework</groupId>
