--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,5 +21,5 @@ phases:
       - echo Build completed on `date`
 artifacts:
   files:
-    - target/devops-9.0.1-SNAPSHOT.war
+   # - target/devops-9.0.1-SNAPSHOT.war
      - '**/*'
